src/alto-ui/Datagrid/Datagrid.scss
@import '../scss/inc';

.Datagrid {
  overflow: hidden;
  height: 100%;
  display: flex;
  flex-direction: column;
  opacity: 0;
  border: 1px solid $coolgrey-20;
  border-radius: $border-radius-default;
  max-width: 100%;
  max-height: 100%;
  // Misalignement on last rows
  line-height: 1;
  -ms-overflow-style: -ms-autohiding-scrollbar;

  &--loaded {
    opacity: 1;
  }
}

.Datagrid__head,
.Datagrid__body {
  display: flex;
}

.Datagrid__body {
  flex: 1 1 0;
  height: 100%;
}

.Datagrid__head {
  border-bottom: 1px solid $coolgrey-20;
  .ps__rail-x {
    display: none;
  }
}

.Datagrid__header-row {
  display: flex;
  flex-direction: column;
}

.Datagrid__header-row--frozen {
  margin-right: 2px;
  box-shadow: 2px 0 0 $coolgrey-20;
}

.Datagrid__header-row--static,
.Datagrid__rows--static {
  flex: 1 1 0;
}
.Datagrid__header-row,
.Datagrid__rows {
  overflow: hidden;
}

.Datagrid__header-row--static {
  position: relative;
  overflow-x: auto;
  overflow-y: hidden;
  -ms-overflow-style: none;
  &::-webkit-scrollbar {
    height: 0;
    visibility: hidden;
  }
}

.Datagrid__rows--frozen {
  box-shadow: 2px 0 0 $coolgrey-20;
  margin-right: 2px;
  overflow-y: auto;
  overflow-x: hidden;
  -ms-overflow-style: none;
  &::-webkit-scrollbar {
    display: none;
  }
  .ps__rail-y {
    display: none;
  }
}

.Datagrid__rows--static {
  position: relative;
  overflow: auto;
}

.Datagrid__rows-container {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: auto;
}

.DataGrid__perfect-scrollbar {
  // Override inline with added by scrollbar package
  width: 100% !important;
  height: 100% !important;
}

.Datagrid__no-data-label {
  font-size: $spacing-xx-large;
  color: $coolgrey-40;
  text-align: center;
  padding: 0;
  margin: auto;
}

.DataGrid__row-checkbox {
  display: flex;
  align-items: center;
  padding-left: 0.75rem;
  height: $height-datagrid-default;
  width: $height-datagrid-default;
  border-bottom: 1px solid $coolgrey-20;

  &--header {
    background-color: $white;
  }

  &--compact:not(.DataGrid__row-checkbox--header) {
    height: $height-datagrid-compact;
  }

  &--comfortable {
    height: $height-datagrid-comfortable;
  }
}

@media all and (-ms-high-contrast: none) {
  *::-ms-backdrop,
  .Datagrid {
    border-radius: 0;
  } /* IE11 */

  .Datagrid__header-row--static {
    -ms-overflow-style: none;
  }

  .Datagrid__rows--frozen {
    overflow-x: hidden;
    -ms-overflow-style: none;
  }
}

/* Hack for Edge Scrolling */
@supports (-ms-ime-align: auto) {
  .Datagrid__head {
    height: 25.5%;
  }
  .Datagrid__body {
    height: 74.5%;
  }
}

